fixed alignment in the table

--- a/HW#3-CSS-Tables/css/style.css
+++ b/HW#3-CSS-Tables/css/style.css
@@ -20,7 +20,9 @@ body {
   box-shadow: 0 0 0 1px #ffffff;
   border-radius: 8px;
 }
-
+td {
+  width: 33%;
+}
 .simple th {
   font-weight: 700;
 }
